# quote-automation

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
.githooks/: pre-commit
docs/: implementation_steps.md  secrets_management.md
scripts/: check_env.py  git_remote_setup.sh  run_quote_pipeline.py  scan_secrets.py  set_github_secrets.sh  sync_csv_to_gsheet.py
src/staff_quoter/: __init__.py  config.py
src/staff_quoter/google_sheets/: __init__.py  client.py
src/staff_quoter/pipeline/: __init__.py  formula_validator.py  models.py  pdf_renderer.py  quote_builder.py  runner.py
tests/: test_formula_validator.py  test_google_sheets_gateway.py  test_quote_pipeline.py
